# rust-web-app

./: .env  Cargo.toml  Makefile  README.md  build.rs  docker-compose.yml
.github/workflows/: rust.yml
db/migrations/: 001__create_tables.sql
scripts/: setup-keycloak.sh
src/: auth.rs  db.rs  lib.rs  main.rs
src/http/: address.rs  auth.rs  error.rs  mod.rs  openapi.rs  person.rs
