[package]
edition = "2021"
name = "rust-web-app"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = {version = "0.7.9"}
axum-extra = {version = "0.9.4", features = ["typed-header"]}
axum-macros = "0.4"
dotenvy = "0.15"
http-body-util = "0.1.2"
hyper = {version = "1.5.1", features = ["full"]}
jsonwebtoken = "9.3.0"
reqwest = {version = "0.12", features = ["json"]}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
serde_with = "3.11"
sqlx = {version = "0.8.0", features = ["migrate", "postgres", "runtime-tokio", "tls-rustls", "time", "uuid"]}
thiserror = "2.0"
time = {version = "0.3", features = ["serde", "serde-human-readable", "macros"]}
tokio = {version = "1.40", features = ["full"]}
tower = "0.5"
tracing = "0.1"
tracing-subscriber = "0.3"
utoipa = {version = "5.3.0", features = ["axum_extras", "uuid", "time"]}
utoipa-swagger-ui = {version = "7.1.0", features = ["axum"]}
uuid = {version = "1.11", features = ["serde", "v4"]}
validator = {version = "0.19", features = ["derive"]}
