[package]
edition = "2021"
name = "rust-web-app"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = {version = "0.8.4"}
axum-extra = {version = "0.10.1", features = ["typed-header"]}
axum-macros = "0.5.0"
dotenvy = "0.15"
http-body-util = "0.1.3"
hyper = {version = "1.6.0", features = ["full"]}
jsonwebtoken = "9.3.1"
once_cell = "1.19"
reqwest = {version = "0.12.22", features = ["json"]}
serde = {version = "1.0.219", features = ["derive"]}
serde_json = "1.0.142"
serde_with = "3.14.0"
sqlx = {version = "0.8.6", features = ["migrate", "postgres", "runtime-tokio", "tls-rustls", "time", "uuid"]}
thiserror = "2.0.12"
time = {version = "0.3.41", features = ["serde", "serde-human-readable", "macros"]}
tokio = {version = "1.47.1", features = ["full"]}
tower = "0.5.2"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
utoipa = {version = "5.4.0", features = ["axum_extras", "uuid", "time"]}
utoipa-swagger-ui = {version = "9.0.2", features = ["axum"]}
uuid = {version = "1.17.0", features = ["serde", "v4"]}
validator = {version = "0.20.0", features = ["derive"]}
